tests/NormalTests/paczka1/small_fuzzy/13043753.err
Error in line 1: S533 S533 15,0
Error in line 2: raz6P A567 48,6
Error in line 9: RJbtbxg9nkK S533 52,3
